FitLifeProLatest/force-app/main/default/objects/Fitness_Class__c/Fitness_Class__c.object-meta.xml
<CustomObject>
    <label>Fitness Class</label>
    <nameField>
        <displayFormat>FC-{000}</displayFormat>
        <label>Fitness Class Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitness Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>