FitLifeProLatest/force-app/main/default/objects/Fitness_Class__c/fields/Available_Slots__c.field-meta.xml
<CustomField>
    <fullName>Available_Slots__c</fullName>
    <defaultValue>5</defaultValue>
    <label>Available Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>