FitLifeProLatest/force-app/main/default/objects/Fitness_Class__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <label>Booking</label>
    <length>30</length>
    <type>Text</type>
</CustomField>