FitLifeProLatest/force-app/main/default/objects/Fitness_Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Available_Slots__c</columns>
    <columns>Duration__c</columns>
    <columns>Activity__c</columns>
    <columns>Date__c</columns>
    <columns>Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>